--- a/index.html
+++ b/index.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <meta name="title" content="Google clone">
+    <meta name="description" content="front end with HTML and CSS for the google main page">
+    <meta name="keywords" content="front-end, google clone, jose correa m.">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        rel="stylesheet">
     <title>Google Clone</title>
 </head>
+
 <body>
     <header>
         <nav>
-           <ul class="nav-right-section">
-            <li><a href="">Gmail</a></li>
-            <li><a href="">Imagenes</a></li>
-            <li><span class="material-symbols-outlined" style="color: white">apps </span></li>
-            <li><a href=""><img src="/img/user.png" alt="" height="25px"></a></li>
-           </ul> 
+            <ul class="nav-right-section">
+                <li><a href="">Gmail</a></li>
+                <li><a href="">Imagenes</a></li>
+                <li><span class="material-symbols-outlined" style="color: white">apps </span></li>
+                <li><a href=""><img src="/img/user.png" alt height="25px"></a></li>
+            </ul>
         </nav>
     </header>
-    
+
     <main>
-       <section class="main-logo">
-        <img src="https://www.google.com/logos/doodles/2022/seasonal-holidays-2022-6753651837109831.7-ladc.gif" alt="" width="400px">
-       </section>
+        <section class="main-logo">
+            <img src="https://www.google.com/logos/doodles/2022/seasonal-holidays-2022-6753651837109831.7-ladc.gif" alt>
+        </section>
 
-       <section class="main-input">
-        <div class="main-input-container">
-            <span class="material-symbols-outlined" style="color: white; margin-left: 15px; margin-right: 5px;">
-                search
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="material-symbols-outlined" style="color: white; margin-left: 15px; margin-right: 5px;">
+                    search
                 </span>
-            <input type="text" name="" id="" placeholder="Busca en Google">
-            <a href="" title="Búsqueda por voz"><img src="/img/microphone.png" alt="" width="30px"></a>
-        </div>
-       </section>
+                <input id name type="text" placeholder="Busca en Google">
+                <a href title="Búsqueda por voz"><img src="/img/microphone.png" alt width="30px"></a>
+            </div>
+        </section>
 
 
-       <section class="main-btn">
-        <div><button>Buscar con Google</button></div>
-        <div><button>Me siento con suerte</button></div>
-       </section>
+        <section class="main-btn">
+            <div><button>Buscar con Google</button></div>
+            <div><button>Me siento con suerte</button></div>
+        </section>
 
     </main>
 
 
     <footer>
-        <p class="location">México</p>
-        <div class="divider"></div>
+        <div class="footer-wraper">
+            <p class="location">México</p>
+            <div class="divider"></div>
 
-       <div class="footer-links">
-        <div>
-            <a href="">Sobre Google</a>
-            <a href="">Publicidad</a>
-            <a href="">Negocios</a>
-            <a href="">Cómo funciona la Búsqueda</a>
-        </div>
+            <div class="footer-links">
+                <div class="footer-links--left">
+                    <a href="">Sobre Google</a>
+                    <a href="">Publicidad</a>
+                    <a href="">Negocios</a>
+                    <a href="">Cómo funciona la Búsqueda</a>
+                </div>
 
-        <div>
-            <a href="">Privacidad</a>
-            <a href="">Condiciones</a>
-            <a href="">Preferencias</a>
+                <div class="footer-links--right">
+                    <a href="">Privacidad</a>
+                    <a href="">Condiciones</a>
+                    <a href="">Preferencias</a>
+                </div>
+            </div>
         </div>
-       </div>
 
 
 
     </footer>
 </body>
+
 </html>
