--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="language" content="English">
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
         rel="stylesheet">
     <title>Google Clone</title>
